updated the View and Update DTOs to have a version, so Hibernate can check changes when updates
Renamed Dtos to DTOs to follow best practice

Reworked TransportCompanyService
Added  testing to Generic Seeder, Repository, Driver Service and  TransportCompanyService